--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -334,7 +334,11 @@ spa:
       # edit: "Modifier un évènement"
       # index: "Évènements"
       # new: "Nouvel évènement"
-    backend/mineral_matters: #?
+    backend/mineral_matters:
+      # edit: "Modifier la matière minérale\_: %{name}"
+      # index: "Matières minérales"
+      # new: "Ajouter une matière minérale"
+      # show: "Matière minérale\_: %{name}"
     backend/myselves:
       # change_password: "Changer de mot de passe"
       # show: "Mes informations"
@@ -445,10 +449,14 @@ spa:
     backend/product_nature_components: #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
-    backend/product_nature_variants: #?
+    backend/product_nature_variants:
+      # edit: "Modifier la variante de produit\_: %{name}"
+      # index: "Variantes de produits"
+      # new: "Nouvelle variante de produit"
+      # show: "Variante de produit\_: %{name}"
     backend/product_natures:
       # edit: "Modifier le type de produit\_: %{name}"
-      # index: "Type de produit"
+      # index: "Type de produits"
       # new: "Nouveau type de produit"
       # show: "Type de produit\_: %{name}"
     backend/product_price_listings:
@@ -754,6 +762,7 @@ spa:
     # add_diagnostic: "Ajouter un diagnostic"
     # add_email: "Ajouter une adresse e-mail"
     # add_fax: "Ajouter un n° de fax"
+    # add_indicator_datum: "Ajouter une mesure pour un indicateur"
     # add_item: "Ajouter un élément"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
@@ -1061,7 +1070,8 @@ spa:
       # unparted: "Non affectés"
       # unreceived: "Non reçus"
       # waiting: "À encaisser plus tard"
-    # indicator: "Tableau de bord"
+    # indicator: "Indicateur"
+    # indicators: "Indicateurs"
     # info: "Information\_: %{value}"
     infos: "Informar las caracteristicas de la entrega"
     insert_actual_password: "Coja su contraseña actual"
@@ -1385,6 +1395,7 @@ spa:
     relations: "Relaciones clientos/abastecedores" #?
     # relationship: "Gestion des relations clients/fournisseurs"
     # remove_diagnostic: "Supprimer un diagnostic"
+    # remove_indicator_datum: "Supprimer une mesure pour un indicateur"
     # remove_treatment: "Supprimer un traitement"
     # remove_watching: "Supprimer un produit de référence"
     reopen: "Volver a abrir el periodico"
