--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -136,6 +136,17 @@ spa:
         # children: "Sous-catégories"
         # published: "Publiée"
       product_nature_price: #?
+      product_nature_variant:
+        # commercial_description: "Description Catalogue"
+        # commercial_name: "Nom Catalogue"
+        # contour: "contour de la forme"
+        # horizontal_rotation: "rotation horizontale de la forme"
+        # purchase_indicator: "Indicateur d'achat"
+        # purchase_indicator_unit: "Unité d'achat"
+        # sale_indicator: "Indicateur de vente"
+        # sale_indicator_unit: "Unité de vente"
+        # usage_indicator: "Indicateur d'usage"
+        # usage_indicator_unit: "Unité d'usage"
       product_price_template:
         # amount: "Montant TTC"
         # listing: " associée"
