--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -209,7 +209,7 @@ arb:
         # animal_global_documentation: "Documentation globale animale"
         # feeding: "Alimentation"
         # identification: "Identification"
-        # landparcel_management: "Conduite de la parcelle"
+        # land_parcel_management: "Conduite de la parcelle"
         # marketing: "Commercialisation"
         # production: "Production"
         # reproduction: "Reproduction"
