--- a/config/locales/fra/prints/land_parcel_fertilization_list.xml
+++ b/config/locales/fra/prints/land_parcel_fertilization_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="landparcel_fertilization_list" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="land_parcel_fertilization_list" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -206,7 +206,7 @@
 	<group name="campaign" isStartNewPage="true">
 		<groupExpression><![CDATA[$F{campaign}]]></groupExpression>
 	</group>
-	<group name="landparcelgroup" isStartNewPage="true" keepTogether="true">
+	<group name="land_parcel_group" isStartNewPage="true" keepTogether="true">
 		<groupExpression><![CDATA[$F{work_number}]]></groupExpression>
 		<groupHeader>
 			<band height="125">
@@ -243,7 +243,7 @@
 					</textElement>
 					<text><![CDATA[Précédent cultural]]></text>
 				</staticText>
-				<textField evaluationTime="Group" evaluationGroup="landparcelgroup" isBlankWhenNull="true">
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
 					<reportElement uuid="7ffc3808-a292-4169-9bac-7bf545fc238e" style="base" x="71" y="59" width="170" height="20"/>
 					<textElement/>
 					<textFieldExpression><![CDATA[$F{production_name}]]></textFieldExpression>
