Fixes land parcels views

--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -412,6 +412,7 @@ jpn:
       # product_nature_ability: "Compétence"
       # product_nature_category: "Catégorie de produit"
       # product_nature_indicator: "Indicateur"
+      # product_nature_variant: "Variante de type de produit"
       # product_price: "Prix"
       # product_price_listing: "Liste de prix"
       # product_price_template: "Type de prix"
@@ -568,7 +569,6 @@ jpn:
     # content_maximal_quantity: "Content maximal quantity"
     # content_nature: "Content nature"
     # content_unit: "Content unit"
-    # conveyors: "Convoyeurs"
     # coordinate: "Coordonnée"
     # country: "Pays"
     # created_at: "Date et heure de création"
@@ -886,12 +886,8 @@ jpn:
     # paid_taxes: "Taxes payées"
     parent: "親戚"
     parent_id: "親戚" #?
-    # parent_kinships: "Relation parent"
-    # parent_land_parcel: "Sur-îlot"
     # parent_place: "Parent place"
     # participations: "Participations"
-    # parts: "Affectations"
-    # parts_amount: "Montant utilisé"
     # passages: "Passages"
     # password: "Mot de passe"
     # password_confirmation: "Confirmation du mot de passe"
@@ -1121,7 +1117,8 @@ jpn:
     # value: "Valeur"
     # value_format: "Format de la valeur monétaire"
     # variables: "Variables"
-    # variant: "Variant"
+    # variant: "Variante"
+    # variants: "Variantes"
     # variety: "Variété"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_subjected: "Assujetti à la TVA"
