--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -926,6 +926,7 @@ arb:
       product_nature_component: "عنصر الانتاج" #?
       # product_nature_indicator: "Indicateur"
       product_nature_price: "الاسعار" #?
+      # product_nature_variant: "Variante de type de produit"
       # product_price: "Prix"
       product_price_listing: "فئة الفرد"
       product_price_template: "الاسعار"
@@ -1125,7 +1126,6 @@ arb:
     # content_maximal_quantity: "Content maximal quantity"
     # content_nature: "Content nature"
     # content_unit: "Content unit"
-    # conveyors: "Convoyeurs"
     # coordinate: "Coordonnée"
     counterpart: "النسخة المطابقة" #?
     counterpart_id: "النسخة المطالقة" #?
@@ -1534,12 +1534,10 @@ arb:
     # paid_taxes: "Taxes payées"
     parent: "النسب"
     parent_id: "نسب" #?
-    # parent_kinships: "Relation parent"
-    # parent_land_parcel: "Sur-îlot"
     # parent_place: "Parent place"
     # participations: "Participations"
-    parts: "الاجزاء"
-    parts_amount: "القيمة المستخدمة"
+    parts: "الاجزاء" #?
+    parts_amount: "القيمة المستخدمة" #?
     # passages: "Passages"
     password: "كلمة المرور"
     password_confirmation: "تأكيد كلمة السر"
@@ -1845,7 +1843,8 @@ arb:
     value: "القيمة"
     value_format: "التصميم"
     # variables: "Variables"
-    # variant: "Variant"
+    # variant: "Variante"
+    # variants: "Variantes"
     # variety: "Variété"
     vat_number: "عدد القيمة الضريبية المضافة داخل المجتمع المحلي"
     # vat_subjected: "Assujetti à la TVA"
