--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -387,7 +387,7 @@ fra:
       product_nature_ability: "Compétence" #?
       product_nature_category: "Catégorie de produit"
       product_nature_indicator: "Indicateur" #?
-      # product_nature_variant: "Product nature variant"
+      product_nature_variant: "Variante de type de produit"
       product_price: "Prix"
       product_price_listing: "Liste de prix"
       product_price_template: "Type de prix"
@@ -569,7 +569,6 @@ fra:
     content_nature: "Content nature"
     content_unit: "Content unit" #?
     # contour: "Contour"
-    conveyors: "Convoyeurs" #?
     coordinate: "Coordonnée"
     country: "Pays"
     created_at: "Date et heure de création"
@@ -912,14 +911,10 @@ fra:
     paid_on: "Réglé le"
     paid_taxes: "Taxes payées"
     parent: "Parent"
-    parent_kinships: "Relation parent" #?
-    parent_land_parcel: "Sur-îlot" #?
     parent_place: "Parent place" #?
     # participant: "Participant"
     # participants: "Participants"
     participations: "Participations"
-    parts: "Affectations" #?
-    parts_amount: "Montant utilisé" #?
     passages: "Passages" #?
     password: "Mot de passe"
     password_confirmation: "Confirmation du mot de passe"
@@ -1177,8 +1172,8 @@ fra:
     value: "Valeur"
     value_format: "Format de la valeur monétaire" #?
     variables: "Variables"
-    variant: "Variant"
-    # variants: "Variants"
+    variant: "Variante"
+    variants: "Variantes"
     variety: "Variété"
     vat_number: "Numéro de TVA intra-communautaire"
     vat_subjected: "Assujetti à la TVA"
