--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1366,6 +1366,7 @@ eng:
     print_on: "Print on"
     print_with_template: "Print %{name}"
     # procedure_natures: "Types de procédures"
+    # procedures: "Procédures"
     product: "Product"
     # product_bar: "Produit par catégories"
     product_category: "Product category"
@@ -1544,6 +1545,7 @@ eng:
     supplier_informations: "Supplier informations "
     supply: "Supply"
     # support: "Support"
+    # supports: "Supports de production"
     synthesis: "Synthesis Documents"
     target: "Target"
     # tax_declaration_create: "Ajouter une nouvelle déclaration"
