--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1243,6 +1243,7 @@ jpn:
     # print_on: "Le"
     # print_with_template: "Imprimer %{name}"
     # procedure_natures: "Types de procédures"
+    # procedures: "Procédures"
     # product: "Produit"
     # product_bar: "Produit par catégories"
     # product_category: "Produits"
@@ -1417,6 +1418,7 @@ jpn:
     # supplier_informations: "Informations fournisseur"
     # supply: "Livraison"
     # support: "Support"
+    # supports: "Supports de production"
     # synthesis: "Documents de synthèse"
     # target: "Cible"
     # tax_declaration_create: "Ajouter une nouvelle déclaration"
