--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -736,6 +736,7 @@ spa:
     # incoming_payments: "Encaissements"
     # indicator: "Indicator"
     # indicator_data: "Indicator data"
+    # indicator_datatype: "Indicator datatype"
     # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # indivisible: "Indivisible"
@@ -819,6 +820,7 @@ spa:
     # maximal_value: "Valeur maximale"
     # measure_unit: "Unité de mesure"
     # measure_value: "Valeur de la mesure"
+    # measure_value_unit: "Measure value unit"
     # measured_at: "Mesuré à"
     # member: "Membre"
     # members: "Membres"
