--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1350,6 +1350,7 @@ arb:
     incoming_payments: "الدفعات"
     # indicator: "Indicator"
     # indicator_data: "Indicator data"
+    # indicator_datatype: "Indicator datatype"
     # indicators: "Indicators"
     indirect_links: "روابط مباشرة"
     # indivisible: "Indivisible"
@@ -1455,6 +1456,7 @@ arb:
     # maximal_value: "Valeur maximale"
     # measure_unit: "Unité de mesure"
     # measure_value: "Valeur de la mesure"
+    # measure_value_unit: "Measure value unit"
     # measured_at: "Mesuré à"
     # member: "Membre"
     # members: "Membres"
