--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -61,6 +61,7 @@ jpn:
       # new: "Pointer un nouveau relevé de compte"
       # point: "Pointer le relevé N°%{number}"
       # show: "Relevé de compte N°%{number}"
+    backend/building_divisions: #?
     backend/buildings:
       # edit: "Modifier un bâtiment"
       # index: "Bâtiments"
@@ -684,6 +685,7 @@ jpn:
     # add_production: "Ajouter une production"
     # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
+    # add_support: "Ajouter un support de production"
     # add_treatment: "Ajouter un traitement"
     # add_watching: "Ajouter un produit de référence"
     # add_website: "Ajouter un site Web"
@@ -953,7 +955,7 @@ jpn:
       # one: "Temps d’utilisation total\_: %{count} heure"
       # other: "Temps d’utilisation total\_: %{count} heures"
     # iban: "Numéro de compte bancaire internationale (IBAN)"
-    # identification: "Nom et codes du produit"
+    # identification: "Identification"
     # import: "Importer"
     # import_backup: "Import de fichier de sauvegarde"
     # importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
@@ -1243,6 +1245,7 @@ jpn:
     # print_on: "Le"
     # print_with_template: "Imprimer %{name}"
     # procedure_natures: "Types de procédures"
+    # procedures: "Procédures"
     # product: "Produit"
     # product_bar: "Produit par catégories"
     # product_category: "Produits"
@@ -1417,6 +1420,7 @@ jpn:
     # supplier_informations: "Informations fournisseur"
     # supply: "Livraison"
     # support: "Support"
+    # supports: "Supports de production"
     # synthesis: "Documents de synthèse"
     # target: "Cible"
     # tax_declaration_create: "Ajouter une nouvelle déclaration"
