--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -70,6 +70,7 @@ spa:
       point: "Despuntar el leventar N°%{number} du %{contado}"
       show: "Leventard de cuento N°%{number}"
     backend/base: #?
+    backend/building_divisions: #?
     backend/buildings:
       edit: "Modificacion de un lugar de deposito"
       index: "Lugar de deposito"
@@ -774,6 +775,7 @@ spa:
     # add_production: "Ajouter une production"
     # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
+    # add_support: "Ajouter un support de production"
     # add_treatment: "Ajouter un traitement"
     # add_watching: "Ajouter un produit de référence"
     # add_website: "Ajouter un site Web"
@@ -1054,7 +1056,7 @@ spa:
       # one: "Temps d’utilisation total\_: %{count} heure"
       # other: "Temps d’utilisation total\_: %{count} heures"
     iban: "Numero de cuento bancario internacional (IBAN)"
-    # identification: "Nom et codes du produit"
+    # identification: "Identification"
     import: "Importación de un  fichero de salvaguardia"
     # import_backup: "Import de fichier de sauvegarde"
     # importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
@@ -1346,6 +1348,7 @@ spa:
     print_on: "el"
     # print_with_template: "Imprimer %{name}"
     # procedure_natures: "Types de procédures"
+    # procedures: "Procédures"
     product: "Producto"
     # product_bar: "Produit par catégories"
     # product_category: "Produits"
@@ -1529,6 +1532,7 @@ spa:
     # supplier_informations: "Informations fournisseur"
     # supply: "Livraison"
     # support: "Support"
+    # supports: "Supports de production"
     synthesis: "Documentos de sintesis"
     # target: "Cible"
     tax_create: "Añadir una nueva tasa" #?
